// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Animate Appear Bottom Left 1`] = `
<div
  className="components-animate__appear is-from-left is-from-bottom components-notice is-success is-dismissible"
>
  <div
    className="components-notice__content"
  >
    <p>
      Appear animation. Origin: 
      bottom left
      .
    </p>
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-notice__dismiss has-icon"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Animate Appear Bottom Right 1`] = `
<div
  className="components-animate__appear is-from-right is-from-bottom components-notice is-success is-dismissible"
>
  <div
    className="components-notice__content"
  >
    <p>
      Appear animation. Origin: 
      bottom right
      .
    </p>
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-notice__dismiss has-icon"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Animate Appear Top Left 1`] = `
<div
  className="components-animate__appear is-from-left is-from-top components-notice is-success is-dismissible"
>
  <div
    className="components-notice__content"
  >
    <p>
      Appear animation. Origin: 
      top left
      .
    </p>
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-notice__dismiss has-icon"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Animate Appear Top Right 1`] = `
<div
  className="components-animate__appear is-from-right is-from-top components-notice is-success is-dismissible"
>
  <div
    className="components-notice__content"
  >
    <p>
      Appear animation. Origin: 
      top right
      .
    </p>
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-notice__dismiss has-icon"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Animate Default 1`] = `
<div
  className="components-notice is-success is-dismissible"
>
  <div
    className="components-notice__content"
  >
    <p>
      No default animation. Use one of type = "appear", "slide-in", or "loading".
    </p>
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-notice__dismiss has-icon"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Animate Loading 1`] = `
<div
  className="components-animate__loading components-notice is-success is-dismissible"
>
  <div
    className="components-notice__content"
  >
    <p>
      Loading animation.
    </p>
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-notice__dismiss has-icon"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Animate Slide In 1`] = `
<div
  className="components-animate__slide-in is-from-left components-notice is-success is-dismissible"
>
  <div
    className="components-notice__content"
  >
    <p>
      Slide-in animation.
    </p>
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-notice__dismiss has-icon"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
      />
    </svg>
  </button>
</div>
`;
